plex/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
  ports:
  - name: http
    port: 32400
    targetPort: 32400
    protocol: TCP
  type: ClusterIP
