plex/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plex.xs4some.nl
    secretName: plex-tls
  rules:
  - host: plex.xs4some.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-ingress
            port:
              number: 32400
